# Vkora

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/App/: CMakeLists.txt
Engine/Source/Editor/App/Include/: Editor.hpp
Engine/Source/Editor/App/Include/Panel/: DetailsPanel.hpp  FileBrowser.hpp  HierarchyPanel.hpp  MenuBar.hpp  Viewport.hpp
Engine/Source/Editor/App/Include/UIManage/: EditorGlobalContext.hpp  EditorUIManager.hpp
Engine/Source/Editor/App/Source/: Editor.cpp  main.cpp
Engine/Source/Editor/App/Source/Panel/: DetailsPanel.cpp  FileBrowser.cpp  HierarchyPanel.cpp  MenuBar.cpp  Viewport.cpp
Engine/Source/Editor/App/Source/UIManage/: EditorGlobalContext.cpp  EditorUIManager.cpp
Engine/Source/Runtime/App/: CMakeLists.txt
Engine/Source/Runtime/App/Include/: Engine.hpp  GlobalContext.hpp  WindowSystem.hpp
Engine/Source/Runtime/App/Include/EditorInterface/: EditorUIManager.hpp  Panel.hpp
Engine/Source/Runtime/App/Include/Render/: EditorUI.hpp  RenderSystem.hpp
Engine/Source/Runtime/App/Include/World/: WorldManager.hpp
Engine/Source/Runtime/App/Source/: Engine.cpp  GlobalContext.cpp  WindowSystem.cpp
Engine/Source/Runtime/App/Source/Render/: EditorUI.cpp  RenderSystem.cpp
Engine/Source/Runtime/App/Source/World/: WorldManager.cpp
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Include/Async/: PriorityThreadPool.hpp
Engine/Source/Runtime/Core/Include/Constants/: Epsilon.hpp  MathConstants.hpp
Engine/Source/Runtime/Core/Include/Logging/: Logger.hpp
Engine/Source/Runtime/Core/Include/Misc/: FileLoader.hpp  Paths.hpp
Engine/Source/Runtime/Core/Include/Reflection/: StaticRefl.hpp
Engine/Source/Runtime/Core/Include/Reflection/Traits/: FunctionTraits.hpp  VariableTraits.hpp
Engine/Source/Runtime/Core/Include/SubSystems/: GlslCompiler.hpp  Singleton.h
Engine/Source/Runtime/Core/Include/Timer/: Timer.hpp
Engine/Source/Runtime/Core/Source/Async/: PriorityThreadPool.cpp
Engine/Source/Runtime/Core/Source/Logging/: Logger.cpp
Engine/Source/Runtime/Core/Source/Misc/: FileLoader.cpp  Paths.cpp
Engine/Source/Runtime/Core/Source/Timer/: Timer.cpp
Engine/Source/Runtime/Engine/: CMakeLists.txt
Engine/Source/Runtime/Engine/Include/: SceneGraph.7z
Engine/Source/Runtime/Engine/Include/Camera/: Camera.hpp
Engine/Source/Runtime/Engine/Include/Engine/: InputEvents.hpp
Engine/Source/Runtime/Engine/Include/Engine/Asset/: AssetImporter.hpp  AssetRegistry.hpp
Engine/Source/Runtime/Engine/Include/Engine/Preset/: VkPreset.hpp
Engine/Source/Runtime/Engine/Include/Engine/SceneGraph/: Component.hpp  ComponentPool.hpp  Node.hpp  Scene.hpp  Script.h
Engine/Source/Runtime/Engine/Include/Import/: GLTFLoader.hpp  ObjLoader.hpp
Engine/Source/Runtime/Engine/Include/Rendering/: GeometrySubpass.hpp  LightingSubpass.hpp
Engine/Source/Runtime/Engine/Include/SceneGraph/: Component.h  Node.h  Scene.h
Engine/Source/Runtime/Engine/Include/SceneGraph/Components/: AABB.h  Camera.h  Image.h  Light.h  Material.h  Mesh.h  OrthographicCamera.h  Pbr_Material.h  PerspectiveCamera.h  Sampler.h  SubMesh.h  Texture.h  Transform.h
Engine/Source/Runtime/Engine/Include/SceneGraph/Scripts/: Animation.h  FreeCamera.h  NodeAnimation.h
Engine/Source/Runtime/Engine/Include/Tools/: Utils.hpp
Engine/Source/Runtime/Engine/Source/: SceneGraph.7z
Engine/Source/Runtime/Engine/Source/Camera/: Camera.cpp
Engine/Source/Runtime/Engine/Source/Engine/: InputEvents.cpp
Engine/Source/Runtime/Engine/Source/Engine/Asset/: AssetImporter.cpp  AssetRegistry.cpp
Engine/Source/Runtime/Engine/Source/Engine/Preset/: VkPreset.cpp
Engine/Source/Runtime/Engine/Source/Engine/SceneGraph/: Component.cpp  Node.cpp  Scene.cpp
Engine/Source/Runtime/Engine/Source/Import/: GLTFLoader.cpp  ObjLoader.cpp
Engine/Source/Runtime/Engine/Source/Reflection/: glmRefl.cpp
Engine/Source/Runtime/Engine/Source/Rendering/: GeometrySubpass.cpp  LightingSubpass.cpp
Engine/Source/Runtime/Engine/Source/SceneGraph/: Component.cpp  Node.cpp  Scene.cpp  Script.cpp
Engine/Source/Runtime/Engine/Source/SceneGraph/Components/: AABB.cpp  Camera.cpp  Image.cpp  Mesh.cpp  OrthographicCamera.cpp  Pbr_Material.cpp  PerspectiveCamera.cpp  Sampler.cpp  SubMesh.cpp  Texture.cpp  Transform.cpp
Engine/Source/Runtime/Engine/Source/SceneGraph/Scripts/: Animation.cpp  FreeCamera.cpp  NodeAnimation.cpp
Engine/Source/Runtime/Engine/Source/Tools/: Utils.cpp
Engine/Source/Runtime/Physical/: CMakeLists.txt
Engine/Source/Runtime/Physical/Include/: Body.h
Engine/Source/Runtime/Physical/Include/Math/: Matrix.h
Engine/Source/Runtime/Physical/Include/Shapes/: ShapeBase.h
Engine/Source/Runtime/Physical/Source/Math/: Bounds.cpp  LCP.cpp
Engine/Source/Runtime/Physical/Source/Shapes/: ShapeSphere.cpp
Engine/Source/Runtime/Render/: CMakeLists.txt
Engine/Source/Runtime/Render/Include/Framework/Common/: ResourceCaching.hpp  VkCommon.hpp  VkError.hpp  VkHelpers.hpp  VkStrings.hpp  glmCommon.hpp
Engine/Source/Runtime/Render/Include/Framework/Core/: Allocated.hpp  Buffer.hpp  Camera.hpp  CommandBuffer.hpp  CommandPool.hpp  Debug.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  FrameBuffer.hpp  Image.hpp  ImageSamplerHandle.hpp  ImageView.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineLayout.hpp  PipelineState.hpp  QueryPool.hpp  Queue.hpp  RenderContext.hpp  RenderPass.hpp  Sampler.hpp  ShaderModule.hpp  SwapChain.hpp  VulkanDebug.hpp  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanResource.hpp  VulkanTools.hpp  benchmark.hpp
Engine/Source/Runtime/Render/Include/Framework/Misc/: BufferPool.hpp  BuilderBase.hpp  FencePool.hpp  ResourceBindingState.hpp  ResourceCache.hpp  ResourceRecord.hpp  ResourceReplay.hpp  SemaphorePool.hpp  SpirvReflection.hpp
Engine/Source/Runtime/Render/Include/Framework/Platform/: Window.hpp
Engine/Source/Runtime/Render/Include/Framework/Rendering/: RenderContext.hpp  RenderFrame.hpp  RenderPipeline.hpp  RenderTarget.hpp  Subpass.hpp
Test/: CMakeLists.txt  Refl_Test.cpp
(+93 files in other folders)
